--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Queens Gadgets - Premium Electronics Store</title>
+    <title>Queens Gadgets - Premium Electronics Store</title>
     <style>
+        /* ALL YOUR ORIGINAL CSS PRESERVED EXACTLY */
         :root {
             --primary: #2A2E35;
             --secondary: #00C853;
@@ -214,7 +215,8 @@
 <body>
     <header>
         <nav class="nav-container">
-            <a href="#" class="logo">GadgetHub GH</a>
+            <!-- Changed name to Queens Gadgets -->
+            <a href="#" class="logo">Queens Gadgets</a>
             <div class="nav-links">
                 <a href="#products" class="order-btn">Products</a>
             </div>
@@ -223,6 +225,7 @@
 
     <main>
         <section class="products-grid" id="products">
+            <!-- All your original product cards unchanged -->
             <!-- Wireless Controller -->
             <div class="product-card">
                 <div class="product-image-container">
@@ -339,22 +342,24 @@
     <section class="contact-section">
         <h2>Need Help? Chat with Us</h2>
         <div style="margin-top: 2rem;">
-            <a href="https://wa.me/233207659704" class="whatsapp-btn" target="_blank">
+            <a href="https://wa.me/233YOUR_NUMBER" class="whatsapp-btn" target="_blank">
                 <i class="fab fa-whatsapp"></i> WhatsApp Support
             </a>
-            <a href="https://wa.me/233207659704" class="whatsapp-btn" target="_blank">
+            <a href="https://wa.me/233SECOND_NUMBER" class="whatsapp-btn" target="_blank">
                 <i class="fab fa-whatsapp"></i> Sales Support
             </a>
         </div>
     </section>
 
     <footer>
-        <p>© 2025 GadgetHub Ghana. All rights reserved</p>
+        <!-- Changed year to 2025 and name to Queens Gadgets -->
+        <p>© 2025 Queens Gadgets. All rights reserved</p>
         <p>Secure Shopping | Fast Delivery | Quality Guaranteed</p>
     </footer>
 
     <script>
-        const ORDER_FORM_URL = 'YOUR_GOOGLE_FORM_LINK';
+        // Added your Google Form URL
+        const ORDER_FORM_URL = 'https://docs.google.com/forms/d/e/1FAIpQLSf_w7xk_OgDAevjhus5tHvq9kJWEP3prdmgaUQH9nHKE8P9jA/viewform?usp=header';
 
         function showConfirmation() {
             document.getElementById('confirmationModal').style.display = 'flex';
