--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Queens Gadgets - Premium Electronics Store</title>
+    <title>QUEENS GADGET QG - Premium Electronics Store</title>
     <style>
         /* ALL YOUR ORIGINAL CSS PRESERVED EXACTLY */
         :root {
